to.etc.domui/src/resources/themes/blue/style.theme.css
/*
 * DomUI "blue" stylesheet.
 * File represents composition of fragments that are defining default style for each component.
 */
/*** 000_dateinput.frag.css ***/
/*** Date input ***/
@IMPORT url("calendar-blue2.css");
/*** 002_core.frag.css ***/
/*** Core style ***/
/* Body style */
body,html {
	background: url(bg-gradient.png.svg) repeat-x;
	background-color: <%= bg_color %>;
/*	height: 100%; jal 20110221 Body height causes no end of problems with scrollbars. */
	margin: 0px;
}

/* Reset styles */
* {
	border: 0;
	margin: 0;
	padding: 0;
	font-family: <%= font_family %>;
	font-size: <%= font_size %>;
}

input, textarea, select {
	border-color:#ABADB3 #BFCDD9 #BFCDD9;
	border-style:solid;
	border-width:1px;
	-moz-border-radius: 2px;	
}

input, textarea {
	padding: 2px;
}

input[type=file] {
	border: 0 !important;
	padding: 0px !important;
}

input:hover, textarea:hover, select:hover {
	border-color:#5794BF #D7E8F8 #D7E8F8 #5794BF;
}

select {
	background-color:#FFFFFF;
}

pre {
	font-family: Courier New, Courier, monospace;
}

button img {
	vertical-align: bottom;
}

button {
	vertical-align: bottom;
}

.page-content {
	margin: 0px 10px;
}
/*** 005_oddchars.frag.css ***/
/*** Select special chars ***/
.ui-oddchars {
	padding: 10px;
}

.ui-oddchars-tbl2 {
	margin-top: 15px;
}

.ui-oddchars-c {
	border: 1px solid black;
	width: 2em;
	height: 2em;
	text-align: center;
}

.ui-oddchars-c:hover {
	background-color: #ffe1bf;
}

.ui-oddchars-dt {
	border: 1px solid black;
	text-align: center;
}

.ui-oddchars-dt:hover {
	background-color: #ffe1bf;
}
/*** 010_apptitle.frag.css ***/
/*** App Title bar ***/
.ui-atl-bb {
	white-space: nowrap;
	background-image: url(bg-caption.png.svg);
	background-repeat: no-repeat;
	width: 90%;
	text-align: right;
}

.ui-atl-i {
	background-color: <%= header_bg %>;
	padding-right: 10px;
	padding-left: 5px;
}

.ui-atl-t {
	background-color: <%= header_bg %>;
	width: 10%;
	white-space: nowrap;
	color: #123667;
	font-weight: bold;
	font-size: <%= hdr_font_size %>;
}
/*** 015_splitterbar.frag.css ***/
/*** SplitterPanel. These style names are required by jquery.splitter.js ***/
.splitbarV {
	float: left;
	width: 6px;
	height: 100%;
	line-height: 0px;
	font-size: 0px;
	border-left: solid 1px <%= header_bg %>;
	border-right: solid 1px <%= header_bg %>;
	background: #cbe1fb url(panev.gif) 0% 50%;
}

.splitbuttonV {
	margin-top: -41px;
	margin-left: -4px;
	top: 50%;
	position: relative;
	height: 83px;
	width: 10px;
	background: transparent url(panevc.gif) 10px 50%;
}

.splitbuttonV.invert {
	margin-left: 0px;
	background: transparent url(panevc.gif) 0px 50%;
}

.splitbarV.working,.splitbarH.working,.splitbuttonV.working,.splitbuttonH.working
	{
	-moz-opacity: .50;
	filter: alpha(opacity = 50);
	opacity: .50;
}

.splitbarH {
	height: 6px;
	text-align: left;
	line-height: 0px;
	font-size: 0px;
	border-top: solid 1px <%= header_bg %>;
	border-bottom: solid 1px <%= header_bg %>;
	background: #cbe1fb url(paneh.gif) 50% 0%;
}

.splitbuttonH {
	margin-left: -41px;
	left: 50%;
	position: relative;
	height: 10px !important;
	width: 83px;
	background: transparent url(panehc.gif) 50% 0px;
}

.splitbuttonH.invert {
	margin-top: -4px;
	background: transparent url(panehc.gif) 50% -10px;
}

/* SplitterPanel stuff that is not dependant on jquery.splitter.js */
.ui-splt-vert { /* vertical splitter */
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0;
}

.ui-splt-horz { /* horizontal splitter */
/*	height: 100%; */
/*	width: 100%; */
	width: auto;
}

.ui-splt-left {
	float: left;
	height: 100%;
	border-top: solid 1px <%= header_bg %>;
	overflow: auto;
	position: relative;
}

.ui-splt-right {
	float: right;
	height: 100%;
	overflow: auto;
	position: relative;
}

.ui-splt-top {
	width: auto;
	overflow: auto;
	position: relative;
}

.ui-splt-bottom {
	width: 100%;
	overflow: auto;
	height: 100%;
	position: relative;
}
/*** 020_bugindicator.frag.css ***/
/*** Bug indicator UI ***/
.ui-bug-ind {
	background-color: red;
	position: absolute;
	top: 10px;
	right: 10px;
	width: 80px;
	height: 43px;
	border: 2px solid black;
}
.ui-bug-count {
	font-size: 25px;
	font-weight: bold;
	color: yellow;
}
.ui-bug-msg {
	font-size: 12px;
}
.ui-bug-stk {
	white-space: pre;
	font-family: monospace;
	font-size: 8px;
}
/*** 025_displaycheckbox.frag.css ***/
/*** DisplayCheckbox ***/
.ui-dspcb {
	border: none;
	width: 18px;
	height: 18px;
}
/*** 030_tree.frag.css ***/
/*** Tree component ***/
.ui-tree .selected {
	background: <%= selected_bg %> !important;
}
TD .ui-tree .selected:hover {
	background: <%= selected_bg %> !important;
}

.ui-tr-act {
	cursor: pointer;
}
.ui-tr-val {
	white-space: nowrap;
}
td.ui-tr-sel:hover {
	background-color: <%= highlight_bg %> !important;
}
td.ui-tr-sel {
	cursor: pointer;
}
td.ui-tr-selected {
	background-color: <%= header_bg %>; !important;
}

.ui-tree {
/*	height: 100%;		jal 20111025 - setting this causes trouble if tree is not alone in div.. Fixed for OldHelp browser */
}
/*** 035_displayvalue.frag.css ***/
/*** DisplayValue ***/
.ui-dspv {
	background:none repeat scroll 0 0 <%= readonly_bg %>;
	border: 1px solid <%= readonly_border %>;
	display:block;
	padding:2px;
	min-height:1em;
}
/*** 040_captionedheader.frag.css ***/
/*** CaptionedHeader ***/
.ui-chdr {
	width: 100%;
/*	height: 20px; */
	background-image: url(bg-chdr.png.svg);
	background-position: 0px -2px;
	margin-top: 10px;
}
.ui-chdr-ttl {
	background-color: <%= util.color(header_bg).lighter(0.4) %>;
	-moz-border-radius: 5px;
	padding: 2px 10px 2px 10px;
	white-space: nowrap;
}
.ui-chdr-ttl img {
	padding-right: 10px;
}
.ui-chdr-l {
	width: 20px;
	padding: 0;
	margin: 0;
}
.ui-chdr-c {
	width: 1%;
	overflow: visible;
}
/*** 045_errormessagediv.frag.css ***/
/*** ErrorMessageDiv helper for components that handle their error display ***/
.ui-emd {
	background-color: <%= error_bg %>;
	color: <%= error_fg %>;
	border-color: 1px solid <%= error_border %>;
}
/* ... */

